# risk-platform

./: .gitignore  ARCHITECTURE.md  README.md  SPEC.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: _shared.py  streamlit_app.py
app/views/: backtesting.py  methodologie.py  portefeuille.py  stress_tests.py  var_es.py
config/: portfolio.yaml
data/cache/: README.md  eurusd.csv  prices.csv
docs/archive/: var-engine-2018-2024.md
notebooks/: etude_2020_var_conditionnelle.ipynb  etude_stress_traffic_light.ipynb  etude_student_t_es.ipynb
src/riskplatform/: __init__.py  __main__.py  _validation.py  cli.py  config.py  distributions.py  es.py  pipeline.py  portfolio.py
src/riskplatform/backtest/: __init__.py  _common.py  christoffersen.py  es_backtest.py  exceptions.py  kupiec.py  traffic_light.py
src/riskplatform/data/: __init__.py  loader.py
src/riskplatform/reporting/: __init__.py  daily_report.py  report.py
src/riskplatform/stress/: __init__.py  engine.py  scenarios.py
src/riskplatform/var/: __init__.py  conditional.py  historical.py  monte_carlo.py  parametric.py  rolling.py
src/riskplatform/volatility/: __init__.py  ewma.py  garch.py
tests/: test_app.py  test_backtest.py  test_cli.py  test_config.py  test_daily_report.py  test_data.py  test_distributions.py  test_es.py  test_es_backtest.py  test_etude_2020.py  test_etude_stress.py  test_ewma.py  test_garch.py  test_monte_carlo_student.py  test_pipeline.py  test_portfolio.py  test_report.py  test_stress.py  test_traffic_light.py  test_var.py  test_var_conditional.py
